--- a/BlueBucksKiosk/View/CartStoryboard.storyboard
+++ b/BlueBucksKiosk/View/CartStoryboard.storyboard
@@ -58,17 +58,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cwo-0u-SxL">
-                                <rect key="frame" x="16" y="369" width="361" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemMintColor"/>
-                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="결제하기"/>
-                                <connections>
-                                    <action selector="purchaseBtnPressed:" destination="GX7-AV-gkc" eventType="touchUpInside" id="Exc-eg-Hnx"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jt8-wB-CGK">
                                 <rect key="frame" x="16" y="88" width="361" height="264"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -108,11 +97,23 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cwo-0u-SxL">
+                                <rect key="frame" x="29" y="367" width="334" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemMintColor"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="결제하기"/>
+                                <connections>
+                                    <action selector="purchaseBtnPressed:" destination="GX7-AV-gkc" eventType="touchUpInside" id="Exc-eg-Hnx"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="5eZ-I3-d4t"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
+                        <outlet property="cartTableView" destination="27q-kc-ien" id="7FG-Vj-g6z"/>
                         <outlet property="menuCnt" destination="OrQ-K9-TjF" id="PV8-95-ud0"/>
                         <outlet property="menuPriceSum" destination="XFC-3d-puO" id="zFX-CW-MA9"/>
                         <outlet property="purchaseBtn" destination="cwo-0u-SxL" id="SO9-xO-pZz"/>
