--- a/BlueBucksKiosk/View/Cell/CollectionViewCell.xib
+++ b/BlueBucksKiosk/View/Cell/CollectionViewCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +12,7 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CollectionViewCell" customModule="BlueBucksKiosk" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="160" height="200"/>
-            <autoresizingMask key="autoresizingMask"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="160" height="200"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -28,25 +27,27 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bv2-qC-2hZ">
-                                <rect key="frame" x="7" y="156" width="36" height="16"/>
+                                <rect key="frame" x="7" y="156" width="146" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="16" id="MMV-eu-SwE"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cr9-fj-uSL">
-                                <rect key="frame" x="7" y="177" width="31" height="16"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <rect key="frame" x="7" y="177" width="146" height="13.333333333333343"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="cr9-fj-uSL" secondAttribute="trailing" constant="7" id="3Pq-0y-59G"/>
                             <constraint firstItem="oEV-dM-6DO" firstAttribute="leading" secondItem="wgq-fx-JSh" secondAttribute="leading" constant="7" id="7MV-QV-Z6y"/>
                             <constraint firstAttribute="trailing" secondItem="oEV-dM-6DO" secondAttribute="trailing" constant="7" id="8oa-f0-PMF"/>
+                            <constraint firstAttribute="trailing" secondItem="Bv2-qC-2hZ" secondAttribute="trailing" constant="7" id="Egq-H0-D0F"/>
                             <constraint firstItem="Bv2-qC-2hZ" firstAttribute="top" secondItem="oEV-dM-6DO" secondAttribute="bottom" constant="3" id="HW7-ev-dzo"/>
                             <constraint firstItem="oEV-dM-6DO" firstAttribute="top" secondItem="wgq-fx-JSh" secondAttribute="top" constant="7" id="Kco-LZ-Kv3"/>
                             <constraint firstItem="cr9-fj-uSL" firstAttribute="top" secondItem="Bv2-qC-2hZ" secondAttribute="bottom" constant="5" id="UHV-ZM-ICU"/>
@@ -56,7 +57,6 @@
                     </view>
                 </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="wgq-fx-JSh" secondAttribute="bottom" id="J2t-4Z-i7A"/>
                 <constraint firstItem="wgq-fx-JSh" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Vg2-nu-PBw"/>
