--- a/BlueBucksKiosk/View/Cell/CollectionViewCell.xib
+++ b/BlueBucksKiosk/View/Cell/CollectionViewCell.xib
@@ -4,52 +4,48 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CollectionViewCell" customModule="BlueBucksKiosk" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="gTV-IL-0wX" customClass="CollectionViewCell" customModule="BlueBucksKiosk" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="160" height="200"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="160" height="200"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wgq-fx-JSh">
+                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="wgq-fx-JSh">
                         <rect key="frame" x="0.0" y="0.0" width="160" height="200"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oEV-dM-6DO">
-                                <rect key="frame" x="7" y="7" width="146" height="146"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oEV-dM-6DO">
+                                <rect key="frame" x="20" y="13" width="120" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="oEV-dM-6DO" secondAttribute="height" multiplier="1:1" id="vcE-tu-eKg"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bv2-qC-2hZ">
-                                <rect key="frame" x="7" y="156" width="146" height="16"/>
+                                <rect key="frame" x="20" y="143" width="38" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="16" id="MMV-eu-SwE"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cr9-fj-uSL">
-                                <rect key="frame" x="7" y="177" width="146" height="13.333333333333343"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <rect key="frame" x="20" y="164" width="33" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="cr9-fj-uSL" secondAttribute="trailing" constant="7" id="3Pq-0y-59G"/>
-                            <constraint firstItem="oEV-dM-6DO" firstAttribute="leading" secondItem="wgq-fx-JSh" secondAttribute="leading" constant="7" id="7MV-QV-Z6y"/>
-                            <constraint firstAttribute="trailing" secondItem="oEV-dM-6DO" secondAttribute="trailing" constant="7" id="8oa-f0-PMF"/>
-                            <constraint firstAttribute="trailing" secondItem="Bv2-qC-2hZ" secondAttribute="trailing" constant="7" id="Egq-H0-D0F"/>
-                            <constraint firstItem="Bv2-qC-2hZ" firstAttribute="top" secondItem="oEV-dM-6DO" secondAttribute="bottom" constant="3" id="HW7-ev-dzo"/>
-                            <constraint firstItem="oEV-dM-6DO" firstAttribute="top" secondItem="wgq-fx-JSh" secondAttribute="top" constant="7" id="Kco-LZ-Kv3"/>
+                            <constraint firstItem="oEV-dM-6DO" firstAttribute="leading" secondItem="wgq-fx-JSh" secondAttribute="leading" constant="20" id="7MV-QV-Z6y"/>
+                            <constraint firstAttribute="trailing" secondItem="oEV-dM-6DO" secondAttribute="trailing" constant="20" id="8oa-f0-PMF"/>
+                            <constraint firstItem="Bv2-qC-2hZ" firstAttribute="top" secondItem="oEV-dM-6DO" secondAttribute="bottom" constant="10" id="HW7-ev-dzo"/>
+                            <constraint firstItem="oEV-dM-6DO" firstAttribute="top" secondItem="wgq-fx-JSh" secondAttribute="top" constant="13" id="Kco-LZ-Kv3"/>
                             <constraint firstItem="cr9-fj-uSL" firstAttribute="top" secondItem="Bv2-qC-2hZ" secondAttribute="bottom" constant="5" id="UHV-ZM-ICU"/>
                             <constraint firstItem="cr9-fj-uSL" firstAttribute="leading" secondItem="Bv2-qC-2hZ" secondAttribute="leading" id="okj-9d-MTM"/>
                             <constraint firstItem="Bv2-qC-2hZ" firstAttribute="leading" secondItem="oEV-dM-6DO" secondAttribute="leading" id="sUY-7y-JDl"/>
@@ -71,9 +67,4 @@
             <point key="canvasLocation" x="138.93129770992365" y="20.422535211267608"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
