Fix : 셀 폰트 크기 수정 및 텍스트 이동

--- a/BlueBucksKiosk/View/Cell/CollectionViewCell.xib
+++ b/BlueBucksKiosk/View/Cell/CollectionViewCell.xib
@@ -20,31 +20,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="160" height="200"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oEV-dM-6DO">
-                                <rect key="frame" x="20" y="13" width="120" height="120"/>
+                                <rect key="frame" x="25" y="13" width="110" height="110"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="oEV-dM-6DO" secondAttribute="height" multiplier="1:1" id="vcE-tu-eKg"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bv2-qC-2hZ">
-                                <rect key="frame" x="20" y="143" width="38" height="16"/>
+                                <rect key="frame" x="25" y="138" width="33" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="16" id="MMV-eu-SwE"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cr9-fj-uSL">
-                                <rect key="frame" x="20" y="164" width="33" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <rect key="frame" x="25" y="159" width="29" height="13.333333333333343"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="oEV-dM-6DO" firstAttribute="leading" secondItem="wgq-fx-JSh" secondAttribute="leading" constant="20" id="7MV-QV-Z6y"/>
-                            <constraint firstAttribute="trailing" secondItem="oEV-dM-6DO" secondAttribute="trailing" constant="20" id="8oa-f0-PMF"/>
-                            <constraint firstItem="Bv2-qC-2hZ" firstAttribute="top" secondItem="oEV-dM-6DO" secondAttribute="bottom" constant="10" id="HW7-ev-dzo"/>
+                            <constraint firstItem="oEV-dM-6DO" firstAttribute="leading" secondItem="wgq-fx-JSh" secondAttribute="leading" constant="25" id="7MV-QV-Z6y"/>
+                            <constraint firstAttribute="trailing" secondItem="oEV-dM-6DO" secondAttribute="trailing" constant="25" id="8oa-f0-PMF"/>
+                            <constraint firstItem="Bv2-qC-2hZ" firstAttribute="top" secondItem="oEV-dM-6DO" secondAttribute="bottom" constant="15" id="HW7-ev-dzo"/>
                             <constraint firstItem="oEV-dM-6DO" firstAttribute="top" secondItem="wgq-fx-JSh" secondAttribute="top" constant="13" id="Kco-LZ-Kv3"/>
                             <constraint firstItem="cr9-fj-uSL" firstAttribute="top" secondItem="Bv2-qC-2hZ" secondAttribute="bottom" constant="5" id="UHV-ZM-ICU"/>
                             <constraint firstItem="cr9-fj-uSL" firstAttribute="leading" secondItem="Bv2-qC-2hZ" secondAttribute="leading" id="okj-9d-MTM"/>
