--- a/BlueBucksKiosk/View/Cell/TableViewCell.xib
+++ b/BlueBucksKiosk/View/Cell/TableViewCell.xib
@@ -27,32 +27,32 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Rb-V2-aAx">
-                        <rect key="frame" x="74" y="13" width="36" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <rect key="frame" x="74" y="13" width="33" height="13.333333333333336"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cJL-Eq-rkq">
-                        <rect key="frame" x="117" y="13" width="4" height="16"/>
+                        <rect key="frame" x="110" y="42.333333333333336" width="4" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pq-lG-nRq">
-                        <rect key="frame" x="128" y="13" width="26" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <rect key="frame" x="121" y="43.666666666666664" width="24" height="13.333333333333336"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" systemColor="systemGrayColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JyQ-Sc-M0B">
-                        <rect key="frame" x="74" y="41" width="31" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <rect key="frame" x="74" y="43.666666666666664" width="29" height="13.333333333333336"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ya5-ZV-i59">
-                        <rect key="frame" x="267" y="27" width="35" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <rect key="frame" x="269.66666666666669" y="27.999999999999996" width="32.333333333333314" height="14.333333333333332"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -92,16 +92,16 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zN5-NU-7oT">
-                        <rect key="frame" x="254" y="31" width="8" height="8"/>
+                        <rect key="frame" x="256.66666666666669" y="31" width="8" height="8"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="8" id="PpE-bu-XDk"/>
                             <constraint firstAttribute="height" constant="8" id="cWf-zU-3x7"/>
                         </constraints>
                         <color key="tintColor" name="maincolor"/>
-                        <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="minus" catalog="system">
-                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="9"/>
-                        </buttonConfiguration>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal" title="Button" image="minus" catalog="system">
+                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="9"/>
+                        </state>
                         <connections>
                             <action selector="didTappedCountButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="dPL-3o-vix"/>
                         </connections>
@@ -110,24 +110,24 @@
                 <constraints>
                     <constraint firstItem="YUM-lF-2Sh" firstAttribute="leading" secondItem="Ya5-ZV-i59" secondAttribute="trailing" constant="5" id="4fh-gc-2qo"/>
                     <constraint firstItem="zN5-NU-7oT" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="84y-zD-aPq"/>
-                    <constraint firstItem="cJL-Eq-rkq" firstAttribute="top" secondItem="8Rb-V2-aAx" secondAttribute="top" id="8P7-rw-5v7"/>
                     <constraint firstItem="JyQ-Sc-M0B" firstAttribute="leading" secondItem="8Rb-V2-aAx" secondAttribute="leading" id="8f8-VU-MNP"/>
-                    <constraint firstItem="2Pq-lG-nRq" firstAttribute="leading" secondItem="cJL-Eq-rkq" secondAttribute="trailing" constant="7" id="Biw-17-9MP"/>
+                    <constraint firstItem="2Pq-lG-nRq" firstAttribute="leading" secondItem="cJL-Eq-rkq" secondAttribute="trailing" constant="7" id="Dsa-6I-qvr"/>
                     <constraint firstItem="8Rb-V2-aAx" firstAttribute="leading" secondItem="gZu-gT-o9E" secondAttribute="trailing" constant="7" id="KmK-aF-tYe"/>
                     <constraint firstItem="8Rb-V2-aAx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="13" id="LjZ-nz-9cH"/>
                     <constraint firstItem="Ya5-ZV-i59" firstAttribute="leading" secondItem="zN5-NU-7oT" secondAttribute="trailing" constant="5" id="Lmr-ck-P4o"/>
                     <constraint firstAttribute="bottom" secondItem="gZu-gT-o9E" secondAttribute="bottom" constant="5" id="M96-Yd-R46"/>
+                    <constraint firstItem="cJL-Eq-rkq" firstAttribute="leading" secondItem="JyQ-Sc-M0B" secondAttribute="trailing" constant="7" id="OlW-Yg-7HS"/>
                     <constraint firstAttribute="bottom" secondItem="JyQ-Sc-M0B" secondAttribute="bottom" constant="13" id="SpQ-uO-N1p"/>
                     <constraint firstItem="YM1-sR-wnM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="T8n-nH-9oj"/>
                     <constraint firstItem="gZu-gT-o9E" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="7" id="WqD-JA-3ko"/>
+                    <constraint firstItem="2Pq-lG-nRq" firstAttribute="centerY" secondItem="cJL-Eq-rkq" secondAttribute="centerY" id="YH3-4f-55b"/>
                     <constraint firstItem="YUM-lF-2Sh" firstAttribute="centerY" secondItem="Ya5-ZV-i59" secondAttribute="centerY" id="Zil-TK-VYc"/>
                     <constraint firstItem="gZu-gT-o9E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="a42-Tu-J9N"/>
-                    <constraint firstItem="2Pq-lG-nRq" firstAttribute="top" secondItem="8Rb-V2-aAx" secondAttribute="top" id="jdJ-QS-8ja"/>
                     <constraint firstItem="Ya5-ZV-i59" firstAttribute="centerY" secondItem="zN5-NU-7oT" secondAttribute="centerY" id="lXe-Ge-lfT"/>
                     <constraint firstAttribute="trailing" secondItem="YM1-sR-wnM" secondAttribute="trailing" constant="2" id="lfy-V6-NeR"/>
+                    <constraint firstItem="cJL-Eq-rkq" firstAttribute="centerY" secondItem="JyQ-Sc-M0B" secondAttribute="centerY" id="mmD-nv-Qr3"/>
                     <constraint firstItem="JyQ-Sc-M0B" firstAttribute="leading" secondItem="gZu-gT-o9E" secondAttribute="trailing" constant="7" id="oNZ-ZP-wMN"/>
                     <constraint firstAttribute="trailing" secondItem="YUM-lF-2Sh" secondAttribute="trailing" constant="21" id="sSg-aC-MRo"/>
-                    <constraint firstItem="cJL-Eq-rkq" firstAttribute="leading" secondItem="8Rb-V2-aAx" secondAttribute="trailing" constant="7" id="xmK-GG-NCd"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
