--- a/BlueBucksKiosk/View/CartStoryboard.storyboard
+++ b/BlueBucksKiosk/View/CartStoryboard.storyboard
@@ -59,14 +59,15 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jt8-wB-CGK">
                                 <rect key="frame" x="16" y="88" width="361" height="264"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="27q-kc-ien">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="27q-kc-ien">
                                         <rect key="frame" x="8" y="54" width="345" height="200"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </tableView>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qdz-CQ-yeg">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qdz-CQ-yeg">
                                         <rect key="frame" x="298" y="0.0" width="55" height="55"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="55" id="e3F-El-YrI"/>
+                                        </constraints>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="xmark.bin" catalog="system"/>
@@ -77,7 +78,14 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Qdz-CQ-yeg" secondAttribute="trailing" constant="8" id="2qd-zI-p3z"/>
                                     <constraint firstAttribute="height" constant="264" id="402-xa-7yE"/>
+                                    <constraint firstItem="Qdz-CQ-yeg" firstAttribute="top" secondItem="jt8-wB-CGK" secondAttribute="top" id="EzT-oA-kPD"/>
+                                    <constraint firstItem="27q-kc-ien" firstAttribute="leading" secondItem="jt8-wB-CGK" secondAttribute="leading" constant="8" id="Q1C-dg-8mr"/>
+                                    <constraint firstAttribute="trailing" secondItem="27q-kc-ien" secondAttribute="trailing" constant="8" id="Yny-S1-14E"/>
+                                    <constraint firstItem="27q-kc-ien" firstAttribute="trailing" secondItem="Qdz-CQ-yeg" secondAttribute="trailing" id="dri-2w-2wM"/>
+                                    <constraint firstAttribute="bottom" secondItem="27q-kc-ien" secondAttribute="bottom" constant="10" id="tgC-gZ-NgB"/>
+                                    <constraint firstItem="27q-kc-ien" firstAttribute="top" secondItem="jt8-wB-CGK" secondAttribute="top" constant="54" id="wEn-ev-gar"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isRadius" value="YES"/>
